--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <i class="fas fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>Cyber Security(soon)</p>
+                <p>Electrical Engineering</p>
                 <h1>Hi,I'm <span>Fauzi Laksamana</span><br>This Is My Official Website</h1>
             </div>
         </div>
@@ -40,8 +40,7 @@
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
                     <p>My name is Fauzi Laksamana, I was born in Jakarta, 30 August 2005. I'm very interested in
-                        technology, especially computer, and networking. My hobbies are learning something about TI and
-                        watching American sports
+                        technology, especially computer, and networking. My hobbies are learning something about TI, watching motosports and American sports
                         leagues.
                     </p>
 
@@ -60,7 +59,7 @@
                     <div class="tab-contents" id="hobby">
                         <ul>
                             <li><span>Study</span><br>I like to learn something new, of course about TI</li>
-                            <li><span>Draw</span><br>Draw something is fun, sometimes</li>
+                            <li><span>Watching Motosports</span><br>All about Motogp, F1, MXGP and others</li>
                             <li><span>Coding</span><br>It's stressful, but actually fun</li>
                         </ul>
                     </div>
@@ -150,13 +149,13 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fa-brands fa-instagram"></i>@lulszecv</p>
+                    <p><i class="fa-brands fa-instagram"></i>@logexpertise_</p>
                     <p><i class="fas fa-phone-square-alt"></i>081276047375</p>
                     <div class="social-icons">
                         <a href="https://nba.com/"><i class="fa-solid fa-basketball"></i></a>
                         <a href="https://www.nfl.com/"><i class="fa-solid fa-football"></i></a>
                         <a href="https://www.motogp.com/"><i class="fa-solid fa-flag-checkered"></i></a>
-                        <a href="https://www.instagram.com/lulszecv/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/logexpertise_/"><i class="fab fa-instagram"></i></a>
                         <a href="https://open.spotify.com/user/400szfk59f09j5n7ptgevuedb?si=2c300ce0d5874de2"><i
                                 class="fab fa-spotify"></i></a>
                     </div>
