--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
                     <p>My name is Fauzi Laksamana, I was born in Jakarta, 30 August 2005. I'm very interested in
-                        technology, especially computer, and networking. My hobbies are learning something about TI, watching motosports and American sports
+                        technology, especially computer, and networking. My hobbies are learning something about TI,
+                        watching motosports and American sports
                         leagues.
                     </p>
 
@@ -52,14 +53,14 @@
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>Name</span><br>Fauzi Laksamana</li>
-                            <li><span>Age</span><br>18 Years old</li>
+                            <li><span>Age</span><br>19 Years old</li>
                             <li><span>Gender</span><br>Male</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="hobby">
                         <ul>
                             <li><span>Study</span><br>I like to learn something new, of course about TI</li>
-                            <li><span>Watching Motosports</span><br>All about Motogp, F1, MXGP and others</li>
+                            <li><span>Draw</span><br>Draw something is fun, sometimes</li>
                             <li><span>Coding</span><br>It's stressful, but actually fun</li>
                         </ul>
                     </div>
@@ -140,7 +141,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn">Back To Top</a>
+            <a href="#" class="btn">Back</a>
         </div>
     </div>
     <!-- contact -->
@@ -148,16 +149,17 @@
         <div class="container">
             <div class="row">
                 <div class="contact-left">
-                    <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fa-brands fa-instagram"></i>@logexpertise_</p>
+                    <h1 class="sub-title">Hit Me Up</h1>
+                    <p><i class="fa-brands fa-instagram"></i>@fauzilaksamana_</p>
                     <p><i class="fas fa-phone-square-alt"></i>081276047375</p>
                     <div class="social-icons">
                         <a href="https://nba.com/"><i class="fa-solid fa-basketball"></i></a>
                         <a href="https://www.nfl.com/"><i class="fa-solid fa-football"></i></a>
                         <a href="https://www.motogp.com/"><i class="fa-solid fa-flag-checkered"></i></a>
-                        <a href="https://www.instagram.com/logexpertise_/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/fauzilaksamana_/"><i class="fab fa-instagram"></i></a>
                         <a href="https://open.spotify.com/user/400szfk59f09j5n7ptgevuedb?si=2c300ce0d5874de2"><i
                                 class="fab fa-spotify"></i></a>
+                        <a href="https://www.twitter.com/sec_dead23/"><i class="fab fa-twitter"></i></a>
                     </div>
                     <a href="" class="btn btn2">Back</a>
                     <div class="contact-right">
