--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h1 class="sub-title">About Me</h1>
                     <p>My name is Fauzi Laksamana, I was born in Jakarta, 30 August 2005. I'm very interested in
                         technology, especially computer, and networking. My hobbies are learning something about TI,
-                        watching motosports and American sports
+                        watching motosports, American sports, And Gym.
                         leagues.
                     </p>
 
@@ -53,7 +53,7 @@
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>Name</span><br>Fauzi Laksamana</li>
-                            <li><span>Age</span><br>19 Years old</li>
+                            <li><span>Age</span><br>20 Years old</li>
                             <li><span>Gender</span><br>Male</li>
                         </ul>
                     </div>
@@ -62,6 +62,7 @@
                             <li><span>Study</span><br>I like to learn something new, of course about TI</li>
                             <li><span>Draw</span><br>Draw something is fun, sometimes</li>
                             <li><span>Coding</span><br>It's stressful, but actually fun</li>
+                            <li><span>Gym</span><br>This is My Therapy</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="favorite">
@@ -150,8 +151,8 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Hit Me Up</h1>
-                    <p><i class="fa-brands fa-instagram"></i>@fauzilaksamana_</p>
-                    <p><i class="fas fa-phone-square-alt"></i>081276047375</p>
+                    <p><i class="fa-brands fa-instagram"></i>@fauzilksmn</p>
+                    <p><i class="fas fa-phone-square-alt"></i>087783276626</p>
                     <div class="social-icons">
                         <a href="https://nba.com/"><i class="fa-solid fa-basketball"></i></a>
                         <a href="https://www.nfl.com/"><i class="fa-solid fa-football"></i></a>
@@ -159,7 +160,6 @@
                         <a href="https://www.instagram.com/fauzilaksamana_/"><i class="fab fa-instagram"></i></a>
                         <a href="https://open.spotify.com/user/400szfk59f09j5n7ptgevuedb?si=2c300ce0d5874de2"><i
                                 class="fab fa-spotify"></i></a>
-                        <a href="https://www.twitter.com/sec_dead23/"><i class="fab fa-twitter"></i></a>
                     </div>
                     <a href="" class="btn btn2">Back</a>
                     <div class="contact-right">
@@ -219,3 +219,4 @@
 </body>
 
 </html>
+
