--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h1 class="sub-title">About Me</h1>
                     <p>My name is Fauzi Laksamana, I was born in Jakarta, 30 August 2005. I'm very interested in
                         technology, especially computer, and networking. My hobbies are learning something about TI,
-                        watching motosports, American sports, And Gym.
+                        watching motosports, American sports, And Gym
                         leagues.
                     </p>
 
@@ -157,7 +157,7 @@
                         <a href="https://nba.com/"><i class="fa-solid fa-basketball"></i></a>
                         <a href="https://www.nfl.com/"><i class="fa-solid fa-football"></i></a>
                         <a href="https://www.motogp.com/"><i class="fa-solid fa-flag-checkered"></i></a>
-                        <a href="https://www.instagram.com/fauzilaksamana_/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/kinghottakes_/"><i class="fab fa-instagram"></i></a>
                     </div>
                     <a href="" class="btn btn2">Back</a>
                     <div class="contact-right">
@@ -217,5 +217,3 @@
 </body>
 
 </html>
-
-
