--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <a href="https://nba.com/"><i class="fa-solid fa-basketball"></i></a>
                         <a href="https://www.nfl.com/"><i class="fa-solid fa-football"></i></a>
                         <a href="https://www.motogp.com/"><i class="fa-solid fa-flag-checkered"></i></a>
-                        <a href="https://www.instagram.com/fauzilksmn/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/fauzilksmn"><i class="fab fa-instagram"></i></a>
                     </div>
                     <a href="" class="btn btn2">Back</a>
                     <div class="contact-right">
@@ -217,4 +217,3 @@
 </body>
 
 </html>
-
